Ultimos cambios en la Landing

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LetyMind</title>
+    <title>LetySoft</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="shortcut icon" href="img/icono.ico" type="image/x-icon">
@@ -48,9 +48,9 @@
             <div class="col-lg-8 bg-main pt-lg-0 pt-6 pb-lg-0 pb-5">
                 <section class="mt-3 d-flex align-items-center justify-content-center h-100">
                     <div class="mx-4 mx-md-0 ">
-                        <h2 class="text-white fw-700 mb-3 fs-2-3 d-none d-lg-block">LetyMind Project</h2>
-                        <h1 class="text-white main-title"><strong>Contrata el mejor <br class="d-none d-lg-block"> talento creativo <br class="d-none d-lg-block"> para tu proyecto</strong></h1>
-                        <p class="text-white mt-4 fs-20">Miles de freelancers listos para comenzar a <br class="d-none d-lg-block d-xl-none"> trabajar  en tu <br class="d-none d-xl-block"> proyecto creativo como creadores <br class="d-none d-lg-block d-xl-none"> de contenido.</p>
+                        <h2 class="text-white fw-700 mb-3 fs-2-3 d-none d-lg-block">LetySoft Project</h2>
+                        <h1 class="text-white main-title"><strong>Contrata el mejor <br class="d-none d-lg-block"> talento tecnológico <br class="d-none d-lg-block"> para tu proyecto</strong></h1>
+                        <p class="text-white mt-4 fs-20">Miles de freelancers listos para comenzar a <br class="d-none d-lg-block d-xl-none"> trabajar  en tu <br class="d-none d-xl-block"> proyecto tecnológico como desarrolladores.</p>
                         <div class="text-center text-md-left mt-4 pt-2 pt-lg-0 mt-lg-0">
                             <a class="d-none d-lg-block" href="#contenido"><img src="img/arrow.svg" class="r-image down" alt=""></a>
                             <a class="text-white d-lg-none btn-20px text-dark btn px-6 py-2 fs-20 bg-white" id="abrir" href="#">Contáctanos</a>
@@ -170,16 +170,16 @@
                 <section>
                     <img src="img/foto1.png" alt="" class="w-100 mb-3">
                     <h4><strong>Contrata un solo freelancer</strong></h4>
-                    <p class="fs-1-2">Encuentra un especialista en diseño de identidad de marca, diseño de logos, diseño web o app, edición de videos,
-                    fotografia publicitaria, ilustración digital, entre otros.</p>
+                    <p class="fs-1-2">Encuentra un especialista que te ayude a digitalizar tu negocio y llevarlo al siguiente nivel, com el desarrollo de
+                    sistemas webs o apps móviles.</p>
                 </section>
             </div>
             <div class="col-lg-6">
                 <section>
                     <img src="img/foto2.png" alt="" class="w-100 mb-3">
                     <h4><strong>Contrata un equipo de freelancers</strong></h4>
-                    <p class="fs-1-2">Miles de perfiles de freelancers como fotografos, editores, redactores, streamers, diseñadores, entre otros, y
-                    forma tu equipo creativo para tu proyecto.</p>
+                    <p class="fs-1-2">Accede a miles de perfiles de freelancers como desarrolladores de landing page, creadores de aplicaciones web y móviles,
+                    entre otros, y forma tu equipo tecnológico para tu proyecto.</p>
                 </section>
             </div>
 
