--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
                                - <strong>Sistema de inventarios</strong> <br>
                                - <strong>CRM</strong> <br>
                                - <strong>Ecommerce</strong> <br>
-                               - <strong>Desarrollo personalizado según los requerimientos</strong> <br>
-                               - <strong>Mantenimiento y soporte de sistemas web.</strong>
+                               - <strong>Desarrollo según requerimientos</strong> <br>
+                               - <strong>Mantenimiento y soporte web.</strong>
                             </p>
                         </div>
                     </div>    
@@ -119,7 +119,7 @@
                             <h4 class="card-title"><strong>Aplicaciones móviles</strong></h4>
                             <p class="card-text fs-1-2">Especialista en el diseño y desarrollo de aplicaciones móviles para Android, nativas e hibridas como: <br>
                             - <strong>Ecommerce</strong>  <br>
-                            - <strong>Aplicaciones personalizadas según los requerimientos.</strong>
+                            - <strong>Aplicaciones según requerimientos.</strong>
                             </p>
                         </div>
                     </div>        
