Cambios en la web

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,13 @@
             a.appendChild(r);
         })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
     </script>
+
+    <meta name="description"
+        content="LetySoft I Contrata los mejores talentos tecnológicos 
+Descripción: Miles de freelancers listos para comenzar a trabajar en tu proyecto tecnológico como desarrolladores">
+    <meta name="robots" content="follow,index">
+    <meta property="og:image:type" content="..img/mesa.png">
+
 </head>
 
 <body>
@@ -34,11 +41,11 @@
             <img src="img/completo.png" class="w-16 d-none d-lg-block" width="80%" alt="">
             <img src="img/logs.png" class="d-block d-lg-none h-45" alt="">
             <a href="https://drive.google.com/drive/folders/1O8pRNIr3MzJbCql8jKgPD-mBak7eag6D?usp=sharing"
-                target="_blank" rel="noopener noreferrer" class="btn p-0 d-none d-lg-block">
+                target="_blank" rel="noopener noreferrer" class="btn p-0 d-none">
                 <h4 class="text-dark m-0">Portafolio</h4>
             </a>
             <a href="https://drive.google.com/drive/folders/1O8pRNIr3MzJbCql8jKgPD-mBak7eag6D?usp=sharing"
-                target="_blank" rel="noopener noreferrer" id="magia" class="rectangulo btn p-lg-0 d-block d-lg-none">
+                target="_blank" rel="noopener noreferrer" id="magia" class="rectangulo btn p-lg-0 d-none">
                 <h5 class="text-white m-0">Portafolio</h5>
             </a>
         </nav>
