Imagen para la web

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LetySoft</title>
+    <title>LetySoft | Contrata los mejores talentos tecnológicos</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="shortcut icon" href="img/icono.ico" type="image/x-icon">
@@ -27,10 +27,9 @@
     </script>
 
     <meta name="description"
-        content="LetySoft I Contrata los mejores talentos tecnológicos 
-Descripción: Miles de freelancers listos para comenzar a trabajar en tu proyecto tecnológico como desarrolladores">
+        content="Miles de freelancers listos para comenzar a trabajar en tu proyecto tecnológico como desarrolladores">
     <meta name="robots" content="follow,index">
-    <meta property="og:image:type" content="..img/mesa.png">
+    <meta property="image" content="..img/mesa.png">
 
 </head>
 
