Imagen al compartir el link de la web

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     <meta name="description"
         content="Miles de freelancers listos para comenzar a trabajar en tu proyecto tecnológico como desarrolladores">
     <meta name="robots" content="follow,index">
-    <meta property="image" content="..img/mesa.png">
+    <meta property="image" content="https://letysoft.herokuapp.com/img/mesa.png">
 
 </head>
 
